# workbench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cli/: __init__.py  main.py
cli/commands/: add.py  cd.py  discover.py  docs.py  down.py  feature.py  init.py  push.py  status.py  sync.py  up.py
cli/scaffold/: CLAUDE.md  workbench.yaml
cli/scaffold/docs/: INDEX.md
cli/scaffold/docs/architecture/: system-overview.md
cli/scaffold/docs/decisions/: _template.md
cli/scaffold/docs/guides/: local-development.md
cli/utils/: config.py  git.py  process.py
templates/: adr-template.md  feature-spec-template.md
